# mecarover

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Makefile  README.md  compile_commands.json  ethernetif.c.patch  makefile  mecarover.ioc  ros2 Debug.launch  ros2.ioc  ros2.launch  run.sh  tmux_prepare.sh
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: dma.c  freertos.c  gpio.c  main.c  main.cc  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  tim.c  usart.c
Core/Startup/: startup_stm32f767zitx.s
LWIP/App/: lwip.c  lwip.h
agent/install/: local_setup.sh  setup.sh
agent/robot_description/launch/: localisation.launch.py
agent/robot_description/maps/: my_map.yaml  my_map4.yaml  test3.yaml  test6.pgm  test9.pgm  test9.yaml  versuch1.yaml  versuch2.pgm  versuch2.yaml
application/: application.cpp  mrcpptypes.hpp  pose_types.hpp  retarget.c  retarget.h  robot_params.hpp  rtos_config.h  rtos_utils.h
application/freertos/: cycle_stamp.hpp  task_records.hpp  task_runtime_stats.cpp  task_runtime_stats.hpp  task_uart_queue.cpp  task_uart_queue.hpp  task_uart_streambuf.cpp  task_uart_streambuf.hpp
application/hal/: encoder.hpp  hal.cpp  hal.hpp  motor.hpp
application/legacy/: micro_ros_legacy.cpp
application/legacy/controls/: ControllerTask.h  MecanumController.h
application/legacy/lidar/: lidar.cpp  lidar.h
application/legacy/mrlogger/: mrlogger.c
application/micro_ros/: WheelDataWrapper.hpp  ctrl_utils.hpp  drive_state_type.hpp  drive_state_wrapper.hpp  interpolation.cpp  jacobi_transformation.hpp  lidar.cpp  lidar.hpp  micro_ros.cpp  micro_ros.hpp  odometry.cpp  pose_ctrl.cpp  pose_ctrl.hpp  rcl_guard.hpp  rcl_ret_check.hpp  udp_transport.c  udp_transport.h  wheel_ctrl.cpp  wheel_data_wrapper.hpp
components/Eigen/: Eigen.h
components/HAL/: CMakeLists.txt~  STM_Counter.cc  STM_MCPWM_DC.cc  STM_MCPWM_DC.h  STM_counter.h  STM_hal.cc  hal.h
components/LaserScanner/: LaserScanner.cc  LaserScanner.h
components/controller/: CMakeLists.txt  ControllerTasks.cc  ControllerTasks.h  DiffDriveControl.h  DiffDriveControllerTasks.h  FourWheelMecanumControllerTasks.h  MecanumControl.h  VehicleControl.h
components/mrlogger/: CMakeLists.txt  CMakeLists.txt~  mrlogger.c  mrlogger.cpp~  mrlogger.h
components/mrlogger/.deps/: mrregelung_posix-mrlogger.Po
components/network/: CMakeLists.txt  CMakeLists.txt~  connection.cc  connection.h  imsl_network.cc  imsl_network.cc-bak  imsl_network.h
components/ros_interface/: CMakeLists.txt  CMakeLists.txt~  eth_transport.cc  ros_interface.cc  ros_interface.h
config/: RTOS.h  eth_transport.h  mrclient.h  mrcpptypes.h  mrtypes.h  mrtypes.h~  retarget.h  robot_config.h  ros_config.h  ros_debug.h  rtos_config.h  system_config.h
firmware/: .mxproject  Makefile  README.md  mecarover.ioc
firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
firmware/Core/Src/: freertos.c  gpio.c  main.c  stm32f7xx_hal_msp.c  (+4 more)
firmware/application/: application.cpp  application.hpp  jacobi_transformation.hpp  pose_types.hpp  real_t.h  robot_params.hpp  transformations.hpp  vel2d_frame.cpp  vel2d_frame.hpp
firmware/scripts/: configure_ethernet_if.sh  micro_ros_static_lib_gen.sh  run.sh  tmux_prepare.sh
firmware/tests/: Makefile  test.cpp
host/launch/: launch.py
host/src/: incl.cmake
host/src/odom/: CMakeLists.txt  package.xml
host/src/odom/src/: odom.cpp
host/src/pose_controller/: CMakeLists.txt  package.xml
host/src/pose_controller/src/: pose_controller.cpp
host/src/robot_params/: CMakeLists.txt  package.xml
host/src/utils/: CMakeLists.txt  package.xml
host/src/utils/include/utils/: jacobi_transformation.hpp  pose_types.hpp  real_t.hpp  robot_params.hpp  transformations.hpp  utils.hpp
host/src/wheel_controller/: CMakeLists.txt  package.xml
host/src/wheel_controller/src/: wheel_controller.cpp
host/vel2d_bridge/: CMakeLists.txt  package.xml
host/vel2d_bridge/include/vel2d_bridge/: vel2d_frame.hpp
host/vel2d_bridge/src/: serial_port.hpp  vel2d_bridge.cpp  vel2d_frame.cpp
lib/: RTOS.h  mrcpptypes.h  mrtypes.h  robot_config.h  ros_debug.h  rtos_config.h  system_config.h
lib/Eigen/: Eigen.h
main/: eigenTest.cc  main.cc  ret.c  retarget.c
mecarover/: RTOS.h  main.cc  main.cpp  main.cpp.bak  mecarover.cpp  mecarover.hpp  mrcpptypes.h  mrcpptypes.hpp  mrtypes.h  real_t.h  retarget.c  retarget.h  robot_config.h  robot_params.hpp  rtos_config.h  rtos_utils.h
mecarover/controls/: ControllerTask.cc  ControllerTask.cpp  ControllerTask.h  ControllerTasks.cc  ControllerTasks.h  DiffDriveControl.h  DiffDriveController.h  DiffDriveControllerTask.h  DiffDriveControllerTasks.h  FourWheelMecanumControllerTasks.h  MecanumControl.h  MecanumController.h  MecanumControllerTask.h  VehicleControl.h  VehicleController.h
mecarover/hal/: hal.cpp  hal.hpp  motor.hpp  stm_counter.cc  stm_counter.cpp  stm_counter.h  stm_counter.hpp  stm_encoder.cpp  stm_encoder.hpp  stm_hal.cc  stm_hal.cpp  stm_hal.h  stm_hal.hpp  stm_motor_pwm.cc  stm_motor_pwm.cpp  stm_motor_pwm.h  stm_motor_pwm.hpp
mecarover/lidar/: lidar.cc  lidar.cpp  lidar.h
mecarover/micro_ros/: WheelDataType.hpp  WheelDataWrapper.hpp  ctrl_utils.hpp  encoder_data.cpp  eth_transport.c  eth_transport.cpp  eth_transport.h  interpolation.cpp  micro_ros.cpp  micro_ros.cpp.bak  micro_ros.h  micro_ros.hpp  micro_ros_bak.cpp  micro_ros_bak.hpp  micro_ros_legacy.cpp  micro_ros_legacy.hpp  odometry.cpp  rcl_ret_check.hpp  wheel_PID.cpp  wheel_ctrl.cpp  wheel_ctrl.hpp  wheel_vel_msg.hpp
mecarover/microros_init/: eth_transport.cc  eth_transport.h  microros_init.cc  microros_init.cpp  microros_init.h
mecarover/mrlogger/: mrlogger.c  mrlogger.h
robot_description/: CMakeLists.txt
robot_description/maps/: my_map2.yaml  test10.pgm  test2.pgm  test3.pgm  test4.yaml  versuch1.pgm
scripts/: check_timestamp.py  configure_ethernet_if.sh  run.sh  strict_acsending.py  timestamp_is_acsending.py  tmux_prepare.sh
test/: Makefile  test.cpp
tests/: test.cpp
(+63 files in other folders)
